--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="hero" class="caps">
        <div class="row animated fadeInDown">
-        <div id="logo"><img src="./images/logo.png"></div>
+        <div id="logo"><img src="./images/logo.png" /></div>
           <div class="nav">
             <h4 class="caps">Login</h4> 
             <h4 class="caps">Sign Up</h4>
@@ -32,8 +32,18 @@
         Play Now
        </div>
     </div>
-    <div class="break"></div>
-      
+    <div class="break">
+      <h5>THE ONE STOP DESTINATION FOR LIVE ODDS ON CURRENT EVENTS</h5>
+    </div>
+      <div class="pix section">
+        <div class="container">
+          <h2>This is the pix</h2>
+          <h3>You'll be seeing a lot of it around here.</h3>
+          <img src="./images/pix.png" width="40%"/>
+          <h3>The PIX represents the chance of any given thing happening.</h3>
+
+        </div>
+      </div>  
 
 
       <footer>
