--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="stylesheets/animate.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>   
 
-<script src="./javascripts/unslider.min.js"></script>
+<script src="./javascripts/unslider.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -51,10 +51,10 @@
           <h2 style="color: #063D50;margin-bottom:5%;">The game is simple</h2>
           <div class="row">
             <div class="card-slider" >
-              <ul>
-                  <li><img src="./images/cards/Sports.png" width="70%"/></li>
-                  <li><img src="./images/cards/Political.png" width="70%"//></li>
-                  <li><img src="./images/cards/Financial.png" width="70%"//></li>
+              
+                <img src="./images/cards/Sports.png" width="450px"/>
+                <img src="./images/cards/Political.png" width="450px"/>
+                <img src="./images/cards/Financial.png" width="450px"/>
               </ul>
             </div>
              <div class="text-half">
