Final commit for tonight thank fucking christ
GOD DAMMIT IT’S HACKY BUT IT WORKS I’M SORRY SYNTACTICAL GOD

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <div class="hero" class="caps">
        <div class="row animated fadeInDown">
-        <div id="logo"><img src="./images/logo.png" width="20%"/></div>
+        <div id="logo"><img src="./images/logo.png" width="15%"/></div>
           <div class="nav">
             <h4 class="caps">Login</h4> 
             <h4 class="caps">Sign Up</h4>
@@ -31,7 +31,7 @@
         <h1 class="blended animated fadeInRight delay2">Pivit keeps score</h1>
       </div>
       
-       <div class="button animated fadeIn delay3" id="login">
+       <div class=" button animated fadeIn delay3" id="login">
         Play Now
        </div>
     </div>
@@ -67,10 +67,26 @@ TRY AGAIN.</p>
           </div>
         </div>
       </div>  
-
-      <footer>
-        
-      </footer>
+     <div class="categories section">
+        <div class="container">
+          <h2 style="color: #063D50;margin-bottom:5%;">Play to your strengths</h2>
+          <img src="./images/circles.png" width="50%">
+        </div>
+      </div> 
+      <div class="cta section" style="height:1000px;">
+        <div class="container">
+          <h2>See you out there!</h2>
+          <div class="cta-half">
+              <div class="button">
+                Sign up for free
+              </div>
+              <img src="./images/appstore.png" width="100%">
+            </div>
+        </div>
+      </div> 
+    <div id="footer">
+      <img src="./images/logo.png">
+    </div>
       <script type="text/javascript">
       $(function() {
     $('.card-slider').unslider();
